# starpatterns-lib

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: catalog.py
src/starpatterns/: __init__.py  animations.py  ansi.py  fractals.py  grid_patterns.py  row_patterns.py
tests/: test_basic.py
