[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "starpatterns"
version = "0.1.0"
description = "الگوهای متنی ستاره‌ای برای ترمینال: سطری، ماتریسی، فرکتال و انیمیشن‌های ANSI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
authors = [{name = "Your Name", email = "you@example.com"}]
keywords = ["ascii art", "patterns", "terminal", "ansi", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Artistic Software",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/your-username/starpatterns"
Repository = "https://github.com/your-username/starpatterns"
